force-app/main/default/objects/Int_pointage__c/Int_pointage__c.object-meta.xml
<CustomObject>
    <label>Int_pointage</label>
    <nameField>
        <displayFormat>P{000000000}</displayFormat>
        <label>Nom de Int_pointage</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Int_pointage</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>