force-app/main/default/objects/Int_pointage__c/fields/Annee_cpt__c.field-meta.xml
<CustomField>
    <fullName>Annee_cpt__c</fullName>
    <label>Annee_cpt</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>