force-app/main/default/objects/Int_pointage__c/fields/CodeChapitre__c.field-meta.xml
<CustomField>
    <fullName>CodeChapitre__c</fullName>
    <label>CodeChapitre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>