force-app/main/default/objects/Int_pointage__c/fields/CodeSousChapitre__c.field-meta.xml
<CustomField>
    <fullName>CodeSousChapitre__c</fullName>
    <label>CodeSousChapitre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>