force-app/main/default/objects/Int_pointage__c/fields/Montant_frg__c.field-meta.xml
<CustomField>
    <fullName>Montant_frg__c</fullName>
    <label>Montant_frg</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>