force-app/main/default/objects/Int_pointage__c/fields/NbrHeures__c.field-meta.xml
<CustomField>
    <fullName>NbrHeures__c</fullName>
    <label>NbrHeures</label>
    <precision>9</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>