force-app/main/default/objects/Int_pointage__c/fields/Numero_unique__c.field-meta.xml
<CustomField>
    <fullName>Numero_unique__c</fullName>
    <label>Numéro_unique</label>
    <length>255</length>
    <type>Text</type>
</CustomField>