force-app/main/default/objects/Int_pointage__c/fields/Salarie__c.field-meta.xml
<CustomField>
    <fullName>Salarie__c</fullName>
    <label>Salarié</label>
    <length>255</length>
    <type>Text</type>
</CustomField>