force-app/main/default/objects/Int_pointage__c/fields/Semaine_cpt__c.field-meta.xml
<CustomField>
    <fullName>Semaine_cpt__c</fullName>
    <label>Semaine_cpt</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>