force-app/main/default/objects/Int_pointage__c/fields/Semaine_ori__c.field-meta.xml
<CustomField>
    <fullName>Semaine_ori__c</fullName>
    <label>Semaine_ori</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>